--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,18 +7,44 @@
   <link rel="stylesheet" href="index.css" rel="stylesheet">
   <title>Slide in Menu</title>
 </head>
+
 <body>
-  
+
   <div class="menu">
     <!-- site title bar / header -->
+    <header>
+      <div class="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <h1>Site Name</h1>
+    </header>
     <!-- slide out nav -->
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
   </div>
 
   <main>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur cum corporis, voluptates quam exercitationem quo eaque mollitia dicta itaque vero consequatur esse. Ipsa blanditiis rem maiores non saepe quibusdam provident hic perferendis? Ipsum tempore corrupti vero amet ab ut temporibus minima dolor et dolorum deserunt quod, aspernatur cumque error accusantium quas dolores natus explicabo. Reiciendis sint fugit totam praesentium nobis?</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur cum corporis, voluptates quam exercitationem quo eaque mollitia dicta itaque vero consequatur esse. Ipsa blanditiis rem maiores non saepe quibusdam provident hic perferendis? Ipsum tempore corrupti vero amet ab ut temporibus minima dolor et dolorum deserunt quod, aspernatur cumque error accusantium quas dolores natus explicabo. Reiciendis sint fugit totam praesentium nobis?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur cum corporis, voluptates quam exercitationem
+      quo eaque mollitia dicta itaque vero consequatur esse. Ipsa blanditiis rem maiores non saepe quibusdam provident
+      hic perferendis? Ipsum tempore corrupti vero amet ab ut temporibus minima dolor et dolorum deserunt quod,
+      aspernatur cumque error accusantium quas dolores natus explicabo. Reiciendis sint fugit totam praesentium nobis?
+    </p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur cum corporis, voluptates quam exercitationem
+      quo eaque mollitia dicta itaque vero consequatur esse. Ipsa blanditiis rem maiores non saepe quibusdam provident
+      hic perferendis? Ipsum tempore corrupti vero amet ab ut temporibus minima dolor et dolorum deserunt quod,
+      aspernatur cumque error accusantium quas dolores natus explicabo. Reiciendis sint fugit totam praesentium nobis?
+    </p>
   </main>
 
   <script src="index.js"></script>
 </body>
+
 </html>
